appId: com.basistheory.threeds.example
---
- launchApp
- extendedWaitUntil:
    visible: "3DS"
    timeout: 60000

# Ravelin SDK initializes correctly

- assertVisible: "The integrity of the SDK has been tampered"
- assertVisible: "An emulator is being used to run the App"

# Card 1
- tapOn: "Token ID"
- inputText: "548db39d-8c2a-454d-9fdc-ef2b33b61d70" # 4200000000000008 Visa
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
      visible: "Purchase authentication"
      timeout: 10000
- tapOn:
    id: "dataEntry"
- inputText: "1234"
- tapOn: "Submit"
- assertVisible: "Challenge successful" # Challenge is successful, result will show the expected message
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "attempted" # transStatusReason is not present in ravelin response
- tapOn: "Clear"

# Card 2

- tapOn: "Token ID"
- inputText: "46cd9ebe-e6e9-4e4e-b52a-afd36058601a" #  3528000700000000 JCB
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
      visible: "Purchase authentication"
      timeout: 10000
- tapOn:
    id: "dataEntry"
- inputText: "1234"
- tapOn: "Submit"
- assertVisible: "Challenge successful" # Challenge is successful, result will show the expected message
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "attempted" # transStatusReason is not present in ravelin response
- tapOn: "Clear"
- stopApp
