appId: com.basistheory.threeds.example
---
- launchApp
- extendedWaitUntil:
    visible: "3DS"
    timeout: 60000

# Ravelin SDK initializes correctly

- assertVisible: "The integrity of the SDK has been tampered"
- assertVisible: "An emulator is being used to run the App"

# Card1
- tapOn: "Token ID"
- inputText: "13d28b73-92a3-4a9b-8184-9c5225be7ead" # 4200000000000009 Visa
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
    visible: "Purchase authentication"
    timeout: 10000
- tapOn:
    id: "dataEntry"
- inputText: "1234"
- tapOn: "Submit"
- assertVisible: "Challenge failed"
- tapOn:
      text: "Get Challenge Result"
      retryTapIfNoChange: false
- assertVisible: "failed"
- assertVisible: "card-authentication-failed"
- tapOn: "Clear"

# Card 2

- tapOn: "Token ID"
- inputText: "de49415d-2d03-4ec1-9d45-adc405497144" #  36700102000000 Diners
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
    visible: "Purchase authentication"
    timeout: 10000
- tapOn:
    id: "dataEntry"
- inputText: "1234"
- tapOn: "Submit"
- assertVisible: "Challenge failed"
- tapOn:
      text: "Get Challenge Result"
      retryTapIfNoChange: false
- assertVisible: "failed"
- assertVisible: "card-authentication-failed"
- tapOn: "Clear"
- stopApp
