appId: com.basistheory.threeds.example
---
- launchApp
- extendedWaitUntil:
    visible: "3DS"
    timeout: 60000

# Ravelin SDK initializes correctly

- assertVisible: "The integrity of the SDK has been tampered"
- assertVisible: "An emulator is being used to run the App"

# Visa
- tapOn: "Token ID"
- inputText: "4302b53f-72d0-4f18-b6a4-8b30af102f2c" # 4200000000000011
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
    visible: "Purchase authentication"
    timeout: 10000
- tapOn:
    id: "dataEntry"
- inputText: "1234"
- tapOn: "Submit"
- assertVisible: "Challenge failed"
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "rejected"
- assertVisible: "suspected-fraud"
- tapOn: "Clear"

# Card 2 - Visa 4444333322221111

- tapOn: "Token ID"
- inputText: "26da450f-eba1-461e-817d-1d03885db32b" #  4444333322221111 Visa
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
    visible: "Purchase authentication"
    timeout: 10000
- tapOn:
    id: "dataEntry"
- inputText: "1234"
- tapOn: "Submit"
- assertVisible: "Challenge failed"
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "rejected"
- assertVisible: "suspected-fraud"
- tapOn: "Clear"
- stopApp