appId: com.basistheory.threeds.example
---
- launchApp
- extendedWaitUntil:
    visible: "3DS"
    timeout: 60000

# Ravelin SDK initializes correctly

- assertVisible: "The integrity of the SDK has been tampered"
- assertVisible: "An emulator is being used to run the App"

# Card 1
- tapOn: "Token ID"
- inputText: "ca2a051e-c7e9-40a3-9d16-4e1589ce543b" #  4200000000000007 Visa
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Challenge rejected"
- assertVisible: "suspected-fraud"
- tapOn: "Clear"

# Card 2

- tapOn: "Token ID"
- inputText: "5e6a87c7-c185-440c-93c7-f6b661207d4c" #  6759649826438453 Maestro
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Challenge rejected"
- assertVisible: "suspected-fraud"
- tapOn: "Clear"


# Card 3

- tapOn: "Token ID"
- inputText: "889655cc-a614-4adf-bd92-8389530cd4c1" #  5405001111111116 Mastercard
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Challenge rejected"
- assertVisible: "suspected-fraud"
- tapOn: "Clear"
- stopApp