appId: com.basistheory.threeds.example
---
- launchApp
- extendedWaitUntil:
          visible: "3DS"
          timeout: 60000

# Ravelin SDK initializes correctly

- assertVisible: "The integrity of the SDK has been tampered"
- assertVisible: "An emulator is being used to run the App"

# Visa
- tapOn: "Token ID"
- inputText: "883e5c38-6451-48cb-aabe-ade947e956d0" #  4200000000000002
- tapOn:
        text: "Create Session"
        retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
        text: "Start Challenge"
        retryTapIfNoChange: false
- assertVisible: "Challenge successful"
- tapOn: "Clear"

# Mastercard

- tapOn: "Token ID"
- inputText: "d3b0b9ea-c6a7-4006-86a6-51cc51bc0156" #  5555555555554444
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Challenge successful"
- tapOn: "Clear"

# Amex

- tapOn: "Token ID"
- inputText: "394ff4d2-d11a-4f1b-aff1-8375b367fd17" #  34343434343434
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Challenge successful"
- tapOn: "Clear"
- stopApp