appId: com.basistheory.threeds.example
---
- launchApp
- extendedWaitUntil:
    visible: "3DS"
    timeout: 60000

# Ravelin SDK initializes correctly

- assertVisible: "The integrity of the SDK has been tampered"
- assertVisible: "An emulator is being used to run the App"

# Card 1
- tapOn: "Token ID"
- inputText: "736990d9-4a6d-499e-8270-4a3ba613c022" #  4200000000000013 VISA
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "Unable to create session, 3DS service responded 424"
- tapOn: "Clear"

# Card 2

- tapOn: "Token ID"
- inputText: "c560ea30-06c4-4187-8b22-56760bb39d6c" #  5019717010103742 Dankort
- tapOn:
      text: "Create Session"
      retryTapIfNoChange: false
- assertVisible: "Unable to create session, 3DS service responded 424"
- tapOn: "Clear"
- stopApp
